--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "jade": "*",
-    "express": "~3.1.0"
+    "express": "~3.1.0",
+    "nodemailer": "^0.6.3"
   },
   "author": {
     "name": "Mirco Zeiss",
